Wip 05 complete step 2 (#5)
* feat: updated request params, taking a a bvreak for family time

* feat: refactored swagger, added pagination support
