# src/controllers/people.controller.ts
@@ -1,22 +1,26 @@
 import { NextFunction, Request, Response } from 'express';
 import { CreatePersonDto } from '@dtos/people.dto';
-import { Person } from '@interfaces/people.interface';
+import { People } from '@interfaces/people.interface';
 import personService from '@services/people.service';
 
 class PeopleController {
-
   public personService = new personService();
 
-  public getPeople = async (req: Request, res: Response, next: NextFunction): Promise<void> => {
+  public getPeople = async (
+    req: Request<{
+      page?: string;
+    }>,
+    res: Response,
+    next: NextFunction,
+  ): Promise<void> => {
     try {
-      const findAllPeopleData: Person[] = await this.personService.findAllPeople();
+      const findAllPeopleData: People = await this.personService.findAllPeople(req.query.page as string);
 
-      res.status(200).json({ data: findAllPeopleData, message: 'findAll' });
+      res.status(200).json(findAllPeopleData);
     } catch (error) {
       next(error);
     }
   };
-
 }
 
 export default PeopleController;
